--- a/gb/21/4/16/n12885476.md
+++ b/gb/21/4/16/n12885476.md
@@ -1,15 +1,15 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/ovsqyd366/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/ovsqyd366/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/ovsqyd366/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/ovsqyd366/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/ovsqyd366/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/ovsqyd366/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/ovsqyd366/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/ovsqyd366/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/ovsqyd366/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/ovsqyd366/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/ovsqyd366/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/ovsqyd366/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/ovsqyd366/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/ovsqyd366/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/ovsqyd366/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/ovsqyd366/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/ovsqyd366/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/ovsqyd366/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/ovsqyd366/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/ovsqyd366/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/ovsqyd366/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/ovsqyd366/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/ovsqyd366/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/ovsqyd366/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/ovsqyd366/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/ovsqyd366/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/ovsqyd366/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/ovsqyd366/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/ovsqyd366/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/ovsqyd366/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/ovsqyd366/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/ovsqyd366/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/ovsqyd366/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/ovsqyd366/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/ovsqyd366/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/ovsqyd366/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/ovsqyd366/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/ovsqyd366/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/ovsqyd366/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/ovsqyd366/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/ovsqyd366/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/ovsqyd366/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/ovsqyd366/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/ovsqyd366/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/ovsqyd366/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/ovsqyd366/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/ovsqyd366/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hoxgwd311/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hoxgwd311/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hoxgwd311/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hoxgwd311/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>小提琴手变清洁工 德国民众集会抗议封锁</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/04/id12885488-Bildschirmfoto-2021-04-16-um-21.20.27-600x400.png" />
 <h6>2021年4月11日，小提琴手玛丽亚在德国慕尼黑国王广场参加集会，抗议政府的疫情封锁措施。她因为疫情不能演出，只能当清洁工养家。图为玛丽亚接受大纪元采访。（黄芩／大纪元）
 </h6>
 <hr>
-	<p>【大纪元2021年04月17日讯】（大纪元记者黄芩<ahref="https://github.com/ovsqyd366/djy/blob/master/gb/tag/%E5%BE%B7%E5%9B%BD.md#1">德国</a><ahref="https://github.com/ovsqyd366/djy/blob/master/gb/tag/%E6%85%95%E5%B0%BC%E9%BB%91.md#1">慕尼黑</a>采访报导）玛丽亚在国王广场集会上演奏了一段音乐，赢得了掌声。主持人介绍说，玛丽亚在大学学的是音乐专业，新冠病毒（<ahref="https://github.com/ovsqyd366/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.md#1">中共病毒</a>）暴发之前，她在乐团担任小提琴手，是三个孩子的单身母亲。疫情下，所有演出都被取消，她失去了生活来源，不得不去做清洁工。</p>
-<p>2021年4月11日在<ahref="https://github.com/ovsqyd366/djy/blob/master/gb/tag/%E6%85%95%E5%B0%BC%E9%BB%91.md#1">慕尼黑</a>国王广场（K?nigspaltz），巴伐利亚同舟共济联盟（Bayern-steht-zusammen）、乌利奶奶（UlliOma）和<ahref="https://github.com/ovsqyd366/djy/blob/master/gb/tag/%E5%9F%BA%E5%B1%82%E5%85%9A.md#1">基层党</a>（或称草根党，die Basis）共同举办活动，反抗政府针对<ahref="https://github.com/ovsqyd366/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.md#1">中共病毒</a>的封锁政策。集会期间，数位音乐界和魔术界人士上台表演，他们大都因封锁政策失去了生活来源。</p>
-<figure id="attachment_12885491" aria-describedby="caption-attachment-12885491" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/04/id12885491-IMG_7561.jpg"><img class="size-large wp-image-12885491" src="https://i.epochtimes.com/assets/uploads/2021/04/id12885491-IMG_7561-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-12885491" class="wp-caption-text">2021年4月11日，民众在<ahref="https://github.com/ovsqyd366/djy/blob/master/gb/tag/%E5%BE%B7%E5%9B%BD.md#1">德国</a>慕尼黑国王广场参加集会，抗议政府的<ahref="https://github.com/ovsqyd366/djy/blob/master/gb/tag/%E7%96%AB%E6%83%85%E5%B0%81%E9%94%81.md#1">疫情封锁</a>措施。呼吁要回归正常生活。（黄芩／大纪元）</figcaption></figure>
-<figure id="attachment_12885492" aria-describedby="caption-attachment-12885492" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/04/id12885492-IMG_7576.jpg"><img class="size-large wp-image-12885492" src="https://i.epochtimes.com/assets/uploads/2021/04/id12885492-IMG_7576-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-12885492" class="wp-caption-text">2021年4月11日，民众在德国慕尼黑国王广场参加集会，抗议政府的<ahref="https://github.com/ovsqyd366/djy/blob/master/gb/tag/%E7%96%AB%E6%83%85%E5%B0%81%E9%94%81.md#1">疫情封锁</a>措施。呼吁要回归正常生活。（黄芩／大纪元）</figcaption></figure>
+	<p>【大纪元2021年04月17日讯】（大纪元记者黄芩<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E5%BE%B7%E5%9B%BD.md#1">德国</a><ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E6%85%95%E5%B0%BC%E9%BB%91.md#1">慕尼黑</a>采访报导）玛丽亚在国王广场集会上演奏了一段音乐，赢得了掌声。主持人介绍说，玛丽亚在大学学的是音乐专业，新冠病毒<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.md#1">中共病毒</a>）暴发之前，她在乐团担任小提琴手，是三个孩子的单身母亲。疫情下，所有演出都被取消，她失去了生活来源，不得不去做清洁工。</p>
+<p>2021年4月11日在<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E6%85%95%E5%B0%BC%E9%BB%91.md#1">慕尼黑</a>国王广场（K?nigspaltz），巴伐利亚同舟共济联盟（Bayern-steht-zusammen）、乌利奶奶（UlliOma）和<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E5%9F%BA%E5%B1%82%E5%85%9A.md#1">基层党</a>（或称草根党，die Basis）共同举办活动，反抗政府针对<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E7%97%85%E6%AF%92.md#1">中共病毒</a>的封锁政策。集会期间，数位音乐界和魔术界人士上台表演，他们大都因封锁政策失去了生活来源。</p>
+<figure id="attachment_12885491" aria-describedby="caption-attachment-12885491" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/04/id12885491-IMG_7561.jpg"><img class="size-large wp-image-12885491" src="https://i.epochtimes.com/assets/uploads/2021/04/id12885491-IMG_7561-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-12885491" class="wp-caption-text">2021年4月11日，民众在<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E5%BE%B7%E5%9B%BD.md#1">德国</a>慕尼黑国王广场参加集会，抗议政府的<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E7%96%AB%E6%83%85%E5%B0%81%E9%94%81.md#1">疫情封锁</a>措施。呼吁要回归正常生活。（黄芩／大纪元）</figcaption></figure>
+<figure id="attachment_12885492" aria-describedby="caption-attachment-12885492" style="width: 600px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/04/id12885492-IMG_7576.jpg"><img class="size-large wp-image-12885492" src="https://i.epochtimes.com/assets/uploads/2021/04/id12885492-IMG_7576-600x400.jpg" alt="" width="600" b="400" /></a><figcaption id="caption-attachment-12885492" class="wp-caption-text">2021年4月11日，民众在德国慕尼黑国王广场参加集会，抗议政府的<ahref="https://github.com/hoxgwd311/djy/blob/master/gb/tag/%E7%96%AB%E6%83%85%E5%B0%81%E9%94%81.md#1">疫情封锁</a>措施。呼吁要回归正常生活。（黄芩／大纪元）</figcaption></figure>
 <h2>小提琴手：我们的未来处于巨大危险中</h2>
 <p>玛丽亚告诉大纪元记者，她在一个乐团担任小提琴手，经常参加音乐会演奏。中共病毒暴发一年来，所有娱乐活动都停止了，“非常可怕，一天天下去，我们无法工作。”一年来，她寻找一切可能的工作机会，为别人做清洁、照顾老人、在中学代课等工作。因为孩子们不能上学，很快代课工作也无法进行下去了。现在临时要找学生授课也很困难。</p>
 <figure id="attachment_12885490" aria-describedby="caption-attachment-12885490" style="width: 422px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/04/id12885490-Bildschirmfoto-2021-04-16-um-21.24.52.png"><img class="size-full wp-image-12885490" src="https://i.epochtimes.com/assets/uploads/2021/04/id12885490-Bildschirmfoto-2021-04-16-um-21.24.52.png" alt="" width="422" b="302" /></a><figcaption id="caption-attachment-12885490" class="wp-caption-text">玛丽亚在集会的台上演奏。（黄芩／大纪元）</figcaption></figure>
@@ -43,41 +43,35 @@
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/ovsqyd366/djy/blob/master/gb/20/10/19/n12485349.md#1">万人拉和平人链 德民众：中共病毒令人惊醒</a></li>
-<li><a href="https://github.com/ovsqyd366/djy/blob/master/gb/20/11/8/n12534714.md#1">慕尼黑抗议意外变祈祷大会 神与我们同在</a></li>
-<li><a href="https://github.com/ovsqyd366/djy/blob/master/gb/20/11/19/n12559887.md#1">德国会通过防疫新法 警察水炮驱赶抗议者</a></li>
-<li><a href="https://github.com/ovsqyd366/djy/blob/master/gb/21/1/11/n12681444.md#1">面临生存危机 德国商家发起“我们开业”行动</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/10/19/n12485349.md#1">万人拉和平人链 德民众：中共病毒令人惊醒</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/11/8/n12534714.md#1">慕尼黑抗议意外变祈祷大会 神与我们同在</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/11/19/n12559887.md#1">德国会通过防疫新法 警察水炮驱赶抗议者</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/21/1/11/n12681444.md#1">面临生存危机 德国商家发起“我们开业”行动</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/ovsqyd366/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank">不一样的海外校园</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/9/n10377672.md#1" target="_blank">林辉：民国三位大师眼中的共产主义很可怕</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/12/25/n10932219.md#1" target="_blank">褒奖法轮功 推崇普世价值</a></li>
+<li><a href="https://github.com/ychojm359/ntdtv/blob/master/gb/2020/04/16/a102824026.md#1" target="_blank">前凤凰网记者：中共迫害法轮功是最大的作恶/a> </li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/8/17/n10645382.md#1" target="_blank">严家伟：杀人越货丧尽天良的“土改”</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/7/n11240051.md#1" target="_blank">纽约州奥伯尼市长宣布5月13日法轮大法日</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/msttva3292/djy/blob/master/gb/21/4/11/n12872178.md#1">英国羊群排成神秘的“麦田圈” 令人费解</a></li>
-<li><a href="https://github.com/msttva3292/djy/blob/master/gb/21/3/26/n12838624.md#1">昴星人传神谕  火星童留预言</a></li>
-<li><a href="https://github.com/msttva3292/djy/blob/master/gb/21/4/5/n12858316.md#1">原本命中无子，他做了什么事？连生11个儿子</a></li>
-<li><a href="https://github.com/msttva3292/djy/blob/master/gb/21/4/11/n12873157.md#1">【未解之谜】两位医生经历的临死体验</a></li>
-<li><a href="https://github.com/msttva3292/djy/blob/master/gb/21/4/13/n12877592.md#1">【未解之谜】希尔夫妇被外星人绑架的惊悚经历</a></li>
-<li><a href="https://github.com/msttva3292/djy/blob/master/gb/21/4/15/n12883071.md#1">【秦鹏直播】中共被曝脱钩武器化 左媒成打手</a></li>
-<li><a href="https://github.com/msttva3292/djy/blob/master/gb/21/4/15/n12883043.md#1">【时事纵横】北京似现末日景 两千万网军弃五毛</a></li>
-<li><a href="https://github.com/msttva3292/djy/blob/master/gb/21/4/15/n12882997.md#1">【新闻看点】拜登挚友会蔡英文 中共军演发脾气？</a></li>
-<li><a href="https://github.com/msttva3292/djy/blob/master/gb/21/4/14/n12879826.md#1">【微视频】习防蚂蚁爆雷？传杨雄忘带红卡死亡</a></li>
-<li><a href="https://github.com/msttva3292/djy/blob/master/gb/21/4/14/n12879968.md#1">马云“中国企业家无一善终”一语热传网络</a></li>
-<li><a href="https://github.com/msttva3292/djy/blob/master/gb/21/4/14/n12880131.md#1">挺不住了？从李克强到战狼求西方别脱钩</a></li>
-<li><a href="https://github.com/msttva3292/djy/blob/master/gb/21/4/13/n12877768.md#1">陈惠敏点评香港武打明星 直呼成龙是耍杂技</a></li>
-<li><a href="https://github.com/msttva3292/djy/blob/master/gb/21/4/15/n12882914.md#1">梁朝伟苍老近照曝光 满脸皱纹惊呆网友</a></li>
-<li><a href="https://github.com/msttva3292/djy/blob/master/gb/21/4/14/n12880501.md#1">刘涛代替谢娜当团长 遭蒋勤勤当众吐槽引热议</a></li>
-<li><a href="https://github.com/msttva3292/djy/blob/master/gb/21/4/13/n12878075.md#1">69岁洪金宝近况曝光 被目击弃拐杖轮椅逛街</a></li>
-<li><a href="https://github.com/msttva3292/djy/blob/master/gb/21/4/13/n12878323.md#1">昆凌晒4岁儿正面照 小小周宛如缩小版周杰伦</a></li>
-<li><a href="https://github.com/msttva3292/djy/blob/master/gb/21/4/15/n12881104.md#1">上班一个月蹲厕所50小时 台男被扣薪气炸</a></li>
-<li><a href="https://github.com/msttva3292/djy/blob/master/gb/21/4/15/n12882660.md#1">警惕！打疫苗后出现两症状 恐是血栓</a></li>
-<li><a href="https://github.com/msttva3292/djy/blob/master/gb/21/4/14/n12879016.md#1">NASA的“飞碟”曾坠毁 派直升机去追</a></li>
-<li><a href="https://github.com/msttva3292/djy/blob/master/gb/21/4/13/n12876869.md#1">168断食怎么吃？照1张表加4妙招就不会失败</a></li>
-<li><a href="https://github.com/msttva3292/djy/blob/master/gb/21/4/15/n12881632.md#1">英男订购一袋苹果 却收到iPhone手机</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/20/n11956529.md#1">台男拒缴违反居家检疫罚锾 于8日已出境 存款遭扣押</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/18/n11950904.md#1">【独家】武汉新增确诊是中共公布的22倍</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/19/n11953667.md#1">大陆网络流传的一份死亡名单 引关注</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/19/n11953195.md#1">16岁学生致信武汉作家方方 引起轩然大波</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/19/n11955384.md#1">北京昆明湖罕见涨潮 传上次涨潮后毛泽东去世</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/19/n11954954.md#1">王力宏武汉演出后发烧 忧染疫返台隔离2个月</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/19/n11955678.md#1">钟南山再甩锅 黄秋生怒呛中共专家玩弄言词</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/18/n11949282.md#1">《恋爱可以持续到天长地久》完结 收视破15%</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/18/n11950901.md#1">杜汶泽用口罩换米 与何韵诗幽默互动笑翻网友</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/18/n11950740.md#1">周杰伦全家澳洲度假 返台须居家隔离14天</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/12/n11936269.md#1">缘自天上来 这对夫妻是星官下凡</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/2/11/n11861945.md#1">病是前世业报？民国人做奇梦 疗恶疾</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/11/25/n3095498.md#1">姻缘天注定 丑女有丑福</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/10/n11929738.md#1">“福无双至祸不单行”史上有名的明鉴</a></li>
+<li><a href="https://github.com/hoxgwd311/djy/blob/master/gb/20/3/17/n11947360.md#1">一舞（武）两用的智慧</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/ovsqyd366/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/ovsqyd366/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/4/16/n12885476.htm">小提琴手变清洁工 德国民众集会抗议封锁</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hoxgwd311/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/4/16/n12885476.htm">小提琴手变清洁工 德国民众集会抗议封锁</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/ovsqyd366/djy/blob/master/gb/21/4/16/n12885476.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/ovsqyd366/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ovsqyd366/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/ovsqyd366/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/ovsqyd366/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/ovsqyd366/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ovsqyd366/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/ovsqyd366/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ovsqyd366/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/ovsqyd366/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ovsqyd366/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/ovsqyd366/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ovsqyd366/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/ovsqyd366/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ovsqyd366/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/ovsqyd366/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ovsqyd366/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/ovsqyd366/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ovsqyd366/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/ovsqyd366/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ovsqyd366/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/ovsqyd366/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ovsqyd366/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/ovsqyd366/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ovsqyd366/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/ovsqyd366/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ovsqyd366/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/ovsqyd366/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ovsqyd366/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/ovsqyd366/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ovsqyd366/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/ovsqyd366/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ovsqyd366/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/ovsqyd366/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ovsqyd366/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/ovsqyd366/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ovsqyd366/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/ovsqyd366/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ovsqyd366/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/ovsqyd366/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ovsqyd366/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/ovsqyd366/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ovsqyd366/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/ovsqyd366/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ovsqyd366/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/ovsqyd366/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ovsqyd366/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/ovsqyd366/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/ovsqyd366/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hoxgwd311/djy/blob/master/gb/21/4/16/n12885476.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hoxgwd311/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hoxgwd311/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hoxgwd311/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
